# server/controller/employee/src/main/resources/openapi/documentation-employee.yaml
@@ -15,9 +15,21 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Employee'
+                  $ref: '#/components/schemas/EmployeeGet'
+        '404':
+          description: No employees found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Nothing"
         '500':
           description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Something happened: error details"
     post:
       summary: Create a new employee
       requestBody:
@@ -25,7 +37,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Employee'
+              $ref: '#/components/schemas/EmployeeCreate'
       responses:
         '201':
           description: Employee created successfully
@@ -35,22 +47,103 @@ paths:
           description: Internal server error
 components:
   schemas:
-    Employee:
+    EmployeeGet:
       type: object
       properties:
         id:
           type: integer
-          format: int64
-        name:
+          format: int32
+        firstName:
           type: string
-        email:
+        lastName:
           type: string
-        position:
+        phoneNumber:
           type: string
+        dayOff:
+          type: string
+          enum: [ MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY ]
         hireDate:
           type: string
-          format: date
+          format: date-time
+        occupation:
+          $ref: '#/components/schemas/EmployeeOccupation'
+        housekeeperDto:
+          $ref: '#/components/schemas/Housekeeper'
       required:
-        - name
+        - id
+        - firstName
+        - lastName
+        - phoneNumber
+        - dayOff
+        - hireDate
+        - occupation
+    EmployeeCreate:
+      type: object
+      properties:
+        userDto:
+          $ref: '#/components/schemas/User'
+        firstName:
+          type: string
+        lastName:
+          type: string
+        phoneNumber:
+          type: string
+        dayOff:
+          type: string
+          enum: [ MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY ]
+        hireDate:
+          type: string
+          format: date-time
+        occupation:
+          $ref: '#/components/schemas/EmployeeOccupation'
+        housekeeperDto:
+          $ref: '#/components/schemas/Housekeeper'
+      required:
+        - userDto
+        - firstName
+        - lastName
+        - phoneNumber
+        - dayOff
+        - hireDate
+        - occupation
+    EmployeeOccupation:
+      type: string
+      enum:
+        - HousekeeperSupervisor
+        - Housekeeper
+        - Admin
+        - Cook
+    Housekeeper:
+      type: object
+      nullable: true
+      properties:
+        role:
+          $ref: '#/components/schemas/HousekeeperRole'
+        preferredFloor:
+          type: integer
+          nullable: true
+      required:
+        - role
+    HousekeeperRole:
+      type: string
+      enum:
+        - Kitchen
+        - KitchenSupport
+        - OnCall
+    User:
+      type: object
+      description: User information for employee creation
+      properties:
+        userId:
+          type: string
+        photoUrl:
+          type: string
+          nullable: true
+        isEnabled:
+          type: boolean
+        email:
+          type: string
+      required:
+        - userId
+        - isEnabled
         - email
-        - position
